restcontrollers: developed CustomerController via  test driven development